--- a/analysis/license.Rmd
+++ b/analysis/license.Rmd
@@ -7,14 +7,12 @@ editor_options:
   chunk_output_type: console
 ---
 
-What license are you using for your code? See [choosealicense.com][choose] for
-help deciding. It's a convention to save a file `LICENSE` in the root of your
-Git repo that contains the license text.
+The code is available under [GNU General Public License v3.0][gnu].
 
 What license are you using for the written content on your site? It is
 traditional to choose a [Creative Commons][cc] license for this type of content.
 
-[choose]: http://choosealicense.com/
+[gnu]: https://choosealicense.com/licenses/gpl-3.0/
 [cc]: https://creativecommons.org/choose/
 
 How should others cite your work? It's a convention to save a file `CITATION`
