--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -7,4 +7,4 @@ editor_options:
   chunk_output_type: console
 ---
 
-Describe your project.
+Scripts related to the 2019 Sweet Corn RNA-seq project in the Gore lab at Cornell University
